# enhanced-rag

./: .gitignore  README.md  pyproject.toml
dataset/PromiseEval/: pdf_extractor.py  url_pdf_mapping.json
dataset/llm-for-environmental-review/: NEPAQuAD1_test.csv  NEPAQuAD1_train.csv  NEPAQuaD1-test-submit-XYZ.csv
enhanced_rag/: analysis_q_type.py  main.py  main_2.py  overlap.py  plotting.py  statistical_analysis.py  test.py  test_vanilla_rag.py
enhanced_rag/enhanced_rag/: enhanced_rag.py
enhanced_rag/long_context/: long_context.py
enhanced_rag/self_route/: __init__.py  self_route.py
enhanced_rag/src/enhanced_rag/: __init__.py  enhanced_rag.py
enhanced_rag/src/evaluation/: evaluator.py
enhanced_rag/src/hyde/: __init__.py  hyde.py
enhanced_rag/src/long_context/: __init__.py  long_context.py
enhanced_rag/src/self_route/: __init__.py  self_route.py
enhanced_rag/src/vanilla_rag/: __init__.py  vanilla_rag.py
enhanced_rag/utils/: __init__.py  pdf_trimmer.py
enhanced_rag/vanilla_rag/: vanilla_rag.py
results/: enhanced_rag.json  hyde.json  long_context.json  self_route.json  vanilla_rag.json
tests/: trimmed_eis_FirstNet.txt
